--- a/pom.xml
+++ b/pom.xml
@@ -115,13 +115,13 @@
 			<version>1.2.0</version>
 		</dependency>
 
-		<!-- oracle jdbc -->
+		<!-- Common DBCP -->
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.1.0.7.0</version>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
 		</dependency>
-
+		
 
 		<!-- jackson -->
 		<dependency>
@@ -143,14 +143,7 @@
 		</dependency>
 
 	</dependencies>
-	
-	<repositories>
-		<repository>
-			<id>oracle</id>
-			<name>ORACLE JDBC Repository</name>
-			<url>http://maven.jahia.org/maven2</url>
-		</repository>
-	</repositories>
+
 	
 	<build>
 		<plugins>
@@ -175,7 +168,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
-					<url>http://192.168.1.16:8090/manager/text</url>
+					<url>http://163.44.171.41:8080/manager/text</url>
 					<path>/yjsite</path>
 					<username>5f</username>
 					<password>5f</password>
