--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,19 @@
 			<version>1.4</version>
 		</dependency>
 		
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
+		
+		
 
 		<!-- jackson -->
 		<dependency>
